WU: modificato la logica per il percorso

--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -18,8 +18,7 @@
 </head>
 <body>
     <h2>Mappa con OpenStreetMap e Leaflet</h2>
-    <button onclick="calcolaPercorso()">Calcola percorso da Termini → Piazza di Spagna</button>
-    <div id="info"></div>
+    <button id="percorso">Mostra percorso</button>
     <div id="map"></div>
 
     <!-- JS di Leaflet -->
