--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -19,10 +19,13 @@
 <body>
     <h2>Mappa con OpenStreetMap e Leaflet</h2>
     <button id="percorso">Mostra percorso</button>
+    <h3 id="path"></h3>
     <div id="map"></div>
+    <p id="ind"></p>
 
     <!-- JS di Leaflet -->
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
-    <script src="{{ url_for('static', filename='js/index.js') }}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@mapbox/polyline@1.1.1/src/polyline.js"></script>
+    <script src="{{ url_for('static', filename='js/index.js') }}" type="module"></script>
 </body>
 </html>
