--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -25,13 +25,25 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <div class="input-group mb-3">
-                    <input type="text" class="form-control" id="address_start" placeholder="Indirizzo partenza" aria-label="Indirizzo partenza" aria-describedby="basic-addon1">
+                <div class="input-wrapper">
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" id="address_start" placeholder="Indirizzo partenza" aria-label="Indirizzo partenza" aria-describedby="basic-addon1">
+                    </div>
+                    <div id="suggestions_start" class="suggestions-dropdown"></div>
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="input-group mb-3">
-                    <input type="text" class="form-control" id="address_end" placeholder="Indirizzo destinazione" aria-label="Indirizzo destinazione" aria-describedby="basic-addon1">
+                <div class="input-wrapper">
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" id="address_end" placeholder="Indirizzo destinazione" aria-label="Indirizzo destinazione" aria-describedby="basic-addon1">
+                    </div>
+                    <div id="suggestions_end" class="suggestions-dropdown">
+                        <a href="#">test</a>
+                        <a href="#">test</a>
+                        <a href="#">test</a>
+                        <a href="#">test</a>
+                        <a href="#">test</a>
+                    </div>
                 </div>
             </div>
         </div>
