WU: implementazione dell'autocompletamento degli indirizzi completata ma da migliorare il codice

--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -29,7 +29,7 @@
                     <div class="input-group mb-3">
                         <input type="text" class="form-control" id="address_start" placeholder="Indirizzo partenza" aria-label="Indirizzo partenza" aria-describedby="basic-addon1">
                     </div>
-                    <div id="suggestions_start" class="suggestions-dropdown"></div>
+                    <div id="suggestions_start" class="suggestions-dropdown not-visible"></div>
                 </div>
             </div>
             <div class="col-md-6">
@@ -37,13 +37,7 @@
                     <div class="input-group mb-3">
                         <input type="text" class="form-control" id="address_end" placeholder="Indirizzo destinazione" aria-label="Indirizzo destinazione" aria-describedby="basic-addon1">
                     </div>
-                    <div id="suggestions_end" class="suggestions-dropdown">
-                        <a href="#">test</a>
-                        <a href="#">test</a>
-                        <a href="#">test</a>
-                        <a href="#">test</a>
-                        <a href="#">test</a>
-                    </div>
+                    <div id="suggestions_end" class="suggestions-dropdown not-visible"></div>
                 </div>
             </div>
         </div>
