--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -37,54 +37,14 @@
 
         <!-- mezzi di trasporto -->
         <div class="transport-modes">
-            <button class="mode active" data-mode="car">🚗 Auto</button>
-            <button class="mode" data-mode="walk">🚶 A piedi</button>
-            <button class="mode" data-mode="bike">🚴 Bici</button>
+            <button class="mode active" data-mode="driving-car">🚗 Auto</button>
+            <button class="mode" data-mode="foot-walking">🚶 A piedi</button>
+            <button class="mode" data-mode="cycling-regular">🚴 Bici</button>
         </div>
 
         <!-- CONTENUTO VERO DEL PANNELLO -->
         <div class="panel-content">
 
-            <h3>Pianifica il tuo viaggio</h3>
-
-            <div class="input-section">
-                <!-- partenza -->
-                <label for="address_start">Partenza</label>
-                <input
-                    type="text"
-                    id="address_start"
-                    class="form-control"
-                    placeholder="Inserisci indirizzo di partenza"
-                >
-            </div>
-
-            <div class="route-separator"></div>
-
-            <div class="input-section">
-                <!-- destinazione -->
-                <label for="address_end">Destinazione</label>
-                <input
-                    type="text"
-                    id="address_end"
-                    class="form-control"
-                    placeholder="Inserisci indirizzo di destinazione"
-                >
-            </div>
-
-            <button id="percorso" class="btn-route">
-                Mostra Percorso
-            </button>
-
-        </div>
-    </div>
-
-    <!-- FRECCIA SEMPRE FUORI -->
-    <button id="togglePanel" class="toggle-button">
-        ▶
-    </button>
-
-
-        <div class="panel-content">
             <h3>Pianifica il tuo viaggio</h3>
 
             <div class="input-section">
@@ -96,7 +56,7 @@
                     Partenza
                 </label>
                 <div class="input-wrapper">
-                    <input type="text" class="form-control" id="address_start" placeholder="Inserisci indirizzo di partenza" aria-label="Indirizzo partenza">
+                    <input type="text" id="address_start" class="form-control" placeholder="Inserisci indirizzo di partenza">
                     <div id="suggestions_start" class="suggestions-dropdown not-visible"></div>
                 </div>
             </div>
@@ -114,7 +74,7 @@
                     Destinazione
                 </label>
                 <div class="input-wrapper">
-                    <input type="text" class="form-control" id="address_end" placeholder="Inserisci indirizzo di destinazione" aria-label="Indirizzo destinazione">
+                    <input type="text" id="address_end" class="form-control" placeholder="Inserisci indirizzo di destinazione">
                     <div id="suggestions_end" class="suggestions-dropdown not-visible"></div>
                 </div>
             </div>
@@ -126,8 +86,16 @@
                 </svg>
                 Mostra Percorso
             </button>
+
         </div>
     </div>
+
+    <!-- FRECCIA SEMPRE FUORI -->
+    <button id="togglePanel" class="toggle-button">
+        <svg id="toggleArrow" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1);">
+            <polyline points="15 18 9 12 15 6"></polyline>
+        </svg>
+    </button>
 
     <!-- Mappa -->
     <div id="map"></div>
