--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -27,7 +27,7 @@
                 <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
                 <circle cx="12" cy="10" r="3"></circle>
             </svg>
-            StageMatch
+            stageMatch
         </h1>
         <p>Trova il percorso migliore verso la tua destinazione</p>
     </div>
@@ -35,14 +35,14 @@
     <!-- Pannello di controllo laterale -->
     <div id="controlPanel" class="control-panel">
 
-        <!-- mezzi di trasporto -->
+        <!-- Mezzi di trasporto -->
         <div class="transport-modes">
-            <button class="mode active" data-mode="driving-car">🚗 Auto</button>
+            <button class="mode" data-mode="driving-car">🚗 Auto</button>
             <button class="mode" data-mode="foot-walking">🚶 A piedi</button>
             <button class="mode" data-mode="cycling-regular">🚴 Bici</button>
         </div>
 
-        <!-- CONTENUTO VERO DEL PANNELLO -->
+        <!-- PANNELLO PRINCIPALE -->
         <div class="panel-content">
 
             <h3>Pianifica il tuo viaggio</h3>
@@ -90,7 +90,6 @@
         </div>
     </div>
 
-    <!-- FRECCIA SEMPRE FUORI -->
     <button id="togglePanel" class="toggle-button">
         <svg id="toggleArrow" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1);">
             <polyline points="15 18 9 12 15 6"></polyline>
